[fixed] padding duplication on mobile

--- a/css/_mixins.scss
+++ b/css/_mixins.scss
@@ -17,9 +17,8 @@
 
 @mixin container {
   margin-top: 25vh;
-  //margin-left: 3rem;
   padding-left: 3rem;
   @include tablet {
-    margin-left: 2.6rem;
+    padding-left: 2.6rem;
   }
 }
